fix: change url to deploy url

--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -30,7 +30,7 @@
                     <div class="row as-search-navbar" id="as-search-navbar" style="width: auto;">
                         <div class="as-accessories-filter-tile column large-6 small-3">
 
-                            <button class="as-filter-button" aria-expanded="true" aria-controls="as-search-filters" type="button" onclick="window.location.href = 'http://localhost:3000/';">
+                            <button class="as-filter-button" aria-expanded="true" aria-controls="as-search-filters" type="button" onclick="window.location.href = 'http://enigmatic-thicket-62040.herokuapp.com/';">
                                 <h2 class=" as-filter-button-text">
                                     Smartphones
                                 </h2>
